--- a/my-first-post/index.html
+++ b/my-first-post/index.html
@@ -141,7 +141,7 @@
     </header>
     <div class="nested-copy-line-height lh-copy serif f4 nested-links dark-gray pr4-l w-two-thirds-l"><h2 id="ブログ開設">ブログ開設！</h2>
 <p>この度、ブログをはじめました。</p>
-<p>技術ネタ、趣味や備忘録などを不定期でブログを書いていきます。</p>
+<p>aaaaaa技術ネタ、趣味や備忘録などを不定期でブログを書いていきます。</p>
 <p>よろしくどーぞ！</p>
 <ul class="pa0">
   
