--- a/travel/index.html
+++ b/travel/index.html
@@ -39,7 +39,7 @@
     <meta property="og:title" content="travel" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/tags/travel/" />
+<meta property="og:url" content="http://tmy310.github.io/tags/travel/" />
 <meta itemprop="name" content="travel">
 <meta itemprop="description" content=""><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="travel"/>
@@ -149,7 +149,7 @@
     </main>
     <footer class="bg-navy bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://localhost:1313/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://tmy310.github.io/" >
     &copy;  firebirdテクテクテクブログ 2024 
   </a>
     <div>
