--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://tmy310.github.io/404.html" />
+<meta property="og:url" content="https://tmy310.github.io/404.html" />
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content=""><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -95,7 +95,7 @@
     </main>
     <footer class="bg-navy bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://tmy310.github.io/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://tmy310.github.io/" >
     &copy;  firebirdテクテクテクブログ 2024 
   </a>
     <div>
