Deploy Hugo site - #午後

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
           <h2 id="ブログ開設">ブログ開設！</h2>
 <p>この度、ブログをはじめました。</p>
 <p>技術ネタ、趣味や備忘録などを不定期でブログを書いていきます。</p>
+<p><strong>自動デプロイシステムも構築完了しました！</strong></p>
 <p>よろしくどーぞ！</p>
         </div>
           <a href="/post/my-first-post/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">もっと読む</a>
