--- a/search/index.html
+++ b/search/index.html
@@ -1337,7 +1337,7 @@
 }
 </style>
             <main class="main full-width">
-<form action="/search/" class="search-form" data-json="/search/index.json">
+<form action="/search/" class="search-form" data-json="/index.json">
     <p>
         <label for="search-input">検索</label>
         <input type="text" id="search-input" name="keyword" placeholder="検索キーワードを入力..." autocomplete="off" />
