Deploy Hugo site - 2025年 9月13日 土曜日 17時08分32秒 JST

--- a/404.html
+++ b/404.html
@@ -1235,7 +1235,7 @@
     <div class="error-page-ad" style="margin: 30px auto; max-width: 728px; text-align: center;">
         <p style="color: var(--card-text-color-secondary); font-size: 0.9em; margin-bottom: 10px;">スポンサーリンク</p><!-- 404ページ上部用広告（728x90 推奨） -->
 <!-- AdSenseの場合：エラーページでも収益化可能 -->
-</div><form action="/search/" class="search-form widget" data-json="https://firebird-techtalktech.com/search/index.json">
+</div><form action="/search/" class="search-form widget" >
             <p>
                 <label>検索</label>
                 <input id="searchInput" name="keyword" required placeholder="キーワードを入力..." />
