--- a/search/index.html
+++ b/search/index.html
@@ -12,7 +12,7 @@
 <meta property='og:site_name' content='firebirdテクテクテクブログ'>
 <meta property='og:type' content='article'><meta property='article:section' content='' />
 <meta name="twitter:title" content="検索">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://firebird-techtalktech.com/search/index.json">
+<meta name="twitter:description" content="">
     <link rel="shortcut icon" href="/images/favicon.png" />
 
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8ND35KCZW"></script>
@@ -187,7 +187,9 @@
 <meta property="og:site_name" content="firebirdテクテクテクブログ">
 
 <meta property="og:type" content="article">
-<link rel="preload" href="/search/index.json" as="fetch" crossorigin="anonymous">
+
+    <link rel="preload" href="/index.json" as="fetch" crossorigin="anonymous">
+
     </head>
     <body class="template-search">
     <script>
@@ -1337,7 +1339,7 @@
 }
 </style>
             <main class="main full-width">
-<form action="/search/" class="search-form" data-json="/index.json">
+<form action="/search/" class="search-form">
     <p>
         <label for="search-input">検索</label>
         <input type="text" id="search-input" name="keyword" placeholder="検索キーワードを入力..." autocomplete="off" />
